<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_actionbar_search"
        app:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/menusetting"
        android:icon="@drawable/menu_overflow"
        app:showAsAction="ifRoom"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/Settings"
                android:icon="@drawable/ic_ab_settings"
                app:showAsAction="never"
                android:title="@string/settings">
            </item>
            <item
                android:id="@+id/Help"
                android:icon="@drawable/ic_ab_guide"
                app:showAsAction="never"
                android:title="@string/zad_guide">
            </item>
            <item
                android:id="@+id/Help_showcase"
                android:icon="@drawable/ic_ab_help"
                app:showAsAction="never"
                android:title="@string/zad_help">
            </item>
        </menu>
    </item>

</menu>