<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/search"
        />

    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/intro"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never"
        android:title="@string/zad_guide">
    </item>
    <item
        android:id="@+id/Help_showcase"
        android:icon="@drawable/ic_help_black_24dp"
        app:showAsAction="never"
        android:title="@string/zad_help">
    </item>

</menu>