<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/quote_refresh_rate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/yellow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/freq_edit_widget"
            android:layout_toStartOf="@+id/freq_edit_widget"
            android:gravity="end|bottom"
            android:paddingEnd="8dp"
            android:text="@string/minute"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey_black" />

        <EditText
            android:id="@+id/freq_edit_widget"
            style="@style/Zad_Theme_Purple"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/_40"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text_hint"
            android:textSize="55sp" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="16dp"
        android:text="@string/_30_"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red" />

</LinearLayout>