<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/why_report"
        android:textColor="@color/yellow"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/otherText"
        style="@style/ZadEditText.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/wrong_content"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" >

        <Button
            android:id="@+id/send_report"
            style="@style/Zad_Button_TextSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_item_drawable"
            android:enabled="false"
            android:gravity="center"
            android:minHeight="36dp"
            android:minWidth="88dp"
            android:text="@string/ok_label"
            android:textAllCaps="true"
            android:textColor="@color/text_button"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancel_report"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_item_drawable"
            android:gravity="center"
            android:minHeight="36dp"
            android:minWidth="88dp"
            android:text="@string/cancel_label"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>