<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:text="@string/editDialogTitle"
        android:textColor="@color/yellow"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/CatList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:cacheColorHint="@color/transparent" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_weight="0"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <Button
            android:id="@+id/send_report"
            style="@style/Zad_Button_TextSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_item_drawable"
            android:enabled="false"
            android:gravity="center"
            android:minHeight="36dp"
            android:minWidth="88dp"
            android:text="@string/ok_label"
            android:textAllCaps="true"
            android:textColor="@color/text_button"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancel_report"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_item_drawable"
            android:gravity="center"
            android:minHeight="36dp"
            android:minWidth="88dp"
            android:text="@string/cancel_label"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>